--- a/index.ipynb
+++ b/index.ipynb
@@ -140,8 +140,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"send an email to \" + name + \" at \" + email +\n",
-    "      \" to say how nice it was meeting yesterday\")"
+    "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
    ]
   },
   {
